mysql db connect

--- a/src/Lanting.IDCode.Web.Mvc/appsettings.json
+++ b/src/Lanting.IDCode.Web.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=IDCodeDb; Trusted_Connection=True;"
+    "Default": "Server=localhost; Database=IDCodeDb; User=root;pwd=123456;"
   },
   "Authentication": {
     "JwtBearer": {
