--- a/src/Lanting.IDCode.Migrator/appsettings.json
+++ b/src/Lanting.IDCode.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=IDCodeDb; Trusted_Connection=True;"
+    "Default": "Server=localhost; Database=IDCodeDb; User=root;pwd=123456;"
   }
 }
