--- a/src/Lanting.IDCode.Web.Host/appsettings.json
+++ b/src/Lanting.IDCode.Web.Host/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
-    "ConnectionStrings": {
-        "Default": "Server=localhost; Database=IDCodeDb; Trusted_Connection=True;"
-    },
+  "ConnectionStrings": {
+    "Default": "Server=localhost; Database=IDCodeDb; User=root;pwd=123456;"
+  },
     "App": {
         "ServerRootAddress": "http://localhost:21021/",
         "ClientRootAddress": "http://localhost:4200/",
