--- a/src/Lanting.IDCode.EntityFrameworkCore/Lanting.IDCode.EntityFrameworkCore.csproj
+++ b/src/Lanting.IDCode.EntityFrameworkCore/Lanting.IDCode.EntityFrameworkCore.csproj
@@ -8,10 +8,15 @@
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Migrations\20180718031235_testkey.cs" />
+    <Compile Remove="Migrations\20180718031337_testkey.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Z.EntityFramework.Extensions.EFCore" Version="2.1.22" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lanting.IDCode.Core\Lanting.IDCode.Core.csproj" />
