--- a/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
+++ b/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
+    <Folder Include="wwwroot\codefile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Views\Product\Index.cshtml">
