--- a/src/Lanting.IDCode.Web.Mvc/appsettings.json
+++ b/src/Lanting.IDCode.Web.Mvc/appsettings.json
@@ -18,5 +18,5 @@
       "Microsoft": "Information"
     }
   },
-  "DefaultUrl": "http://www.lanting.com/"
+  "DefaultUrl": "http://localhost:62114/"
 }
