--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /src/Lanting.IDCode.Web.Mvc/wwwroot/images/products
 /src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/baolong
 /src/Lanting.IDCode.Web.Mvc/wwwroot/codefile/baolong/180720/taskone.txt
+/src/Lanting.IDCode.Web.Mvc/wwwroot/images/baolong/ABC.png
