--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 /src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/baolong
 /src/Lanting.IDCode.Web.Mvc/wwwroot/codefile/baolong/180720/taskone.txt
 /src/Lanting.IDCode.Web.Mvc/wwwroot/images/baolong/ABC.png
+*.png
