--- a/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
+++ b/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
@@ -54,6 +54,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\Home\" />
     <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
     <Folder Include="wwwroot\codefile\" />
   </ItemGroup>
