--- a/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
+++ b/src/Lanting.IDCode.Web.Mvc/Lanting.IDCode.Web.Mvc.csproj
@@ -48,6 +48,7 @@
     <PackageReference Include="Abp.RedisCache" Version="3.7.2" />
     <PackageReference Include="Abp.Castle.Log4Net" Version="3.7.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="2.1.0" PrivateAssets="All" />
+    <PackageReference Include="ZXing.Net.Bindings.ZKWeb.System.Drawing" Version="0.16.4" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
@@ -55,13 +56,15 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\Home\" />
     <Folder Include="wwwroot\codepage\admin\" />
     <Folder Include="wwwroot\codepage\baolong\" />
     <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
     <Folder Include="wwwroot\codefile\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Update="Views\Home\Label.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Views\Product\Index.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
