success to print label

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ __pycache__/
 /src/Lanting.IDCode.Web.Mvc/wwwroot/codefile/baolong/180720/taskone.txt
 /src/Lanting.IDCode.Web.Mvc/wwwroot/images/baolong/ABC.png
 *.png
+/src/Lanting.IDCode.Web.Mvc/wwwroot/codefile/nne/180911/28Z2211.txt
